[package]
name = "play"
version = "0.1.0"
authors = ["sathishvinayk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
libc = "0.2.74"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = 0
panic = "unwind"
incremental = false

[profile.test]
debug-assertions = true

[profile.dev.package.log]
opt-level = 1

[profile.dev.package."log: 0.4.4"]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2