[package]
name = "play"
version = "0.1.0"
authors = ["sathishvinayk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
libc = "0.2.74"
sha2 = "0.9.1"
hex = {path = "./hex"}

[workspace]
members = ["hex", "sample"]
